# BunnyScriber

./: .gitignore  README.md  bunnyscriber.spec  generate_bunny_images.py  launch.bat  pyproject.toml  requirements.txt  run.py
bunnyscriber/: __init__.py  __main__.py  app.py  audio_utils.py  cleanup.py  config.py  constants.py  pipeline.py  progress.py  reassembler.py  separator.py  transcriber.py
bunnyscriber/backends/: __init__.py  base.py  custom.py  groq_api.py  mistral_api.py  openai_api.py  whisper_local.py
